@@ -17,6 +17,7 @@
 package org.apache.solr.response;
 
 import static org.apache.solr.client.solrj.response.InputStreamResponseParser.STREAM_KEY;
+import static org.apache.solr.core.CoreContainer.ALLOW_PATHS_SYSPROP;
 
 import java.io.InputStream;
 import java.lang.invoke.MethodHandles;
@@ -25,15 +26,13 @@ import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.apache.lucene.tests.util.LuceneTestCase;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.client.solrj.SolrClient;
-import org.apache.solr.client.solrj.SolrRequest.METHOD;
-import org.apache.solr.client.solrj.SolrRequest.SolrRequestType;
-import org.apache.solr.client.solrj.request.GenericSolrRequest;
+import org.apache.solr.client.solrj.request.MetricsRequest;
 import org.apache.solr.client.solrj.response.InputStreamResponseParser;
 import org.apache.solr.common.params.ModifiableSolrParams;
+import org.apache.solr.common.util.EnvUtils;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.util.ExternalPaths;
 import org.apache.solr.util.SolrJettyTestRule;
@@ -44,40 +43,34 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 public class TestPrometheusResponseWriter extends SolrTestCaseJ4 {
-  @ClassRule public static SolrJettyTestRule solrClientTestRule = new SolrJettyTestRule();
+  @ClassRule public static SolrJettyTestRule solrTestRule = new SolrJettyTestRule();
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
   public static final List<String> VALID_PROMETHEUS_VALUES = Arrays.asList("NaN", "+Inf", "-Inf");
 
   @BeforeClass
   public static void beforeClass() throws Exception {
-    solrClientTestRule.startSolr(LuceneTestCase.createTempDir());
-    solrClientTestRule
-        .newCollection("core1")
-        .withConfigSet(ExternalPaths.DEFAULT_CONFIGSET.toString())
-        .create();
-    solrClientTestRule
-        .newCollection("core2")
-        .withConfigSet(ExternalPaths.DEFAULT_CONFIGSET.toString())
-        .create();
-    var cc = solrClientTestRule.getCoreContainer();
-    cc.waitForLoadingCoresToFinish(30000);
+    EnvUtils.setProperty(
+        ALLOW_PATHS_SYSPROP, ExternalPaths.SERVER_HOME.toAbsolutePath().toString());
+    solrTestRule.startSolr(LuceneTestCase.createTempDir());
+    solrTestRule.newCollection("core1").withConfigSet(ExternalPaths.DEFAULT_CONFIGSET).create();
+    solrTestRule.newCollection("core2").withConfigSet(ExternalPaths.DEFAULT_CONFIGSET).create();
 
     // Populate request metrics on both cores
     ModifiableSolrParams queryParams = new ModifiableSolrParams();
     queryParams.set("q", "*:*");
 
-    solrClientTestRule.getSolrClient("core1").query(queryParams);
-    solrClientTestRule.getSolrClient("core2").query(queryParams);
+    solrTestRule.getSolrClient("core1").query(queryParams);
+    solrTestRule.getSolrClient("core2").query(queryParams);
   }
 
   @Test
   public void testPrometheusStructureOutput() throws Exception {
     ModifiableSolrParams params = new ModifiableSolrParams();
     params.set("wt", "prometheus");
-    var req = new GenericSolrRequest(METHOD.GET, "/admin/metrics", SolrRequestType.ADMIN, params);
+    var req = new MetricsRequest(params);
     req.setResponseParser(new InputStreamResponseParser("prometheus"));
 
-    try (SolrClient adminClient = getHttpSolrClient(solrClientTestRule.getBaseUrl())) {
+    try (SolrClient adminClient = getHttpSolrClient(solrTestRule.getBaseUrl())) {
       NamedList<Object> res = adminClient.request(req);
       String output = InputStreamResponseParser.consumeResponseToString(res);
 
@@ -96,7 +89,7 @@ public class TestPrometheusResponseWriter extends SolrTestCaseJ4 {
                         seenTypeInfo.add(line));
                     return false;
                   })
-              .collect(Collectors.toList());
+              .toList();
       filteredResponse.forEach(
           (actualMetric) -> {
             String actualValue;
@@ -122,14 +115,13 @@ public class TestPrometheusResponseWriter extends SolrTestCaseJ4 {
 
   @Test
   public void testAcceptHeaderOpenMetricsFormat() throws Exception {
-    ModifiableSolrParams params = new ModifiableSolrParams();
-    var req = new GenericSolrRequest(METHOD.GET, "/admin/metrics", SolrRequestType.ADMIN, params);
+    var req = new MetricsRequest();
 
     req.setResponseParser(new InputStreamResponseParser(null));
 
     req.addHeader("Accept", "application/openmetrics-text;version=1.0.0");
 
-    try (SolrClient adminClient = getHttpSolrClient(solrClientTestRule.getBaseUrl())) {
+    try (SolrClient adminClient = getHttpSolrClient(solrTestRule.getBaseUrl())) {
       NamedList<Object> res = adminClient.request(req);
 
       try (InputStream in = (InputStream) res.get(STREAM_KEY)) {
@@ -143,12 +135,11 @@ public class TestPrometheusResponseWriter extends SolrTestCaseJ4 {
 
   @Test
   public void testWtParameterOpenMetricsFormat() throws Exception {
-    ModifiableSolrParams params = new ModifiableSolrParams();
-    var req = new GenericSolrRequest(METHOD.GET, "/admin/metrics", SolrRequestType.ADMIN, params);
+    var req = new MetricsRequest();
 
     req.setResponseParser(new InputStreamResponseParser("openmetrics"));
 
-    try (SolrClient adminClient = getHttpSolrClient(solrClientTestRule.getBaseUrl())) {
+    try (SolrClient adminClient = getHttpSolrClient(solrTestRule.getBaseUrl())) {
       NamedList<Object> res = adminClient.request(req);
 
       try (InputStream in = (InputStream) res.get(STREAM_KEY)) {
@@ -162,12 +153,11 @@ public class TestPrometheusResponseWriter extends SolrTestCaseJ4 {
 
   @Test
   public void testDefaultPrometheusFormat() throws Exception {
-    ModifiableSolrParams params = new ModifiableSolrParams();
-    var req = new GenericSolrRequest(METHOD.GET, "/admin/metrics", SolrRequestType.ADMIN, params);
+    var req = new MetricsRequest();
 
     req.setResponseParser(new InputStreamResponseParser("prometheus"));
 
-    try (SolrClient adminClient = getHttpSolrClient(solrClientTestRule.getBaseUrl())) {
+    try (SolrClient adminClient = getHttpSolrClient(solrTestRule.getBaseUrl())) {
       NamedList<Object> res = adminClient.request(req);
 
       try (InputStream in = (InputStream) res.get(STREAM_KEY)) {
@@ -181,12 +171,11 @@ public class TestPrometheusResponseWriter extends SolrTestCaseJ4 {
 
   @Test
   public void testDefaultPrometheusFormatNoWtParam() throws Exception {
-    ModifiableSolrParams params = new ModifiableSolrParams();
-    var req = new GenericSolrRequest(METHOD.GET, "/admin/metrics", SolrRequestType.ADMIN, params);
+    var req = new MetricsRequest();
 
     req.setResponseParser(new InputStreamResponseParser(null));
 
-    try (SolrClient adminClient = getHttpSolrClient(solrClientTestRule.getBaseUrl())) {
+    try (SolrClient adminClient = getHttpSolrClient(solrTestRule.getBaseUrl())) {
       NamedList<Object> res = adminClient.request(req);
 
       try (InputStream in = (InputStream) res.get(STREAM_KEY)) {
@@ -200,12 +189,11 @@ public class TestPrometheusResponseWriter extends SolrTestCaseJ4 {
 
   @Test
   public void testUnsupportedMetricsFormat() throws Exception {
-    ModifiableSolrParams params = new ModifiableSolrParams();
-    var req = new GenericSolrRequest(METHOD.GET, "/admin/metrics", SolrRequestType.ADMIN, params);
+    var req = new MetricsRequest();
 
     req.setResponseParser(new InputStreamResponseParser("unknownFormat"));
 
-    try (SolrClient adminClient = getHttpSolrClient(solrClientTestRule.getBaseUrl())) {
+    try (SolrClient adminClient = getHttpSolrClient(solrTestRule.getBaseUrl())) {
       NamedList<Object> res = adminClient.request(req);
       assertEquals(400, res.get("responseStatus"));
     }
